Payment Page: Remove margin to correctly align it with the page.

--- a/Themes/css/config.css
+++ b/Themes/css/config.css
@@ -536,6 +536,9 @@ img.popularCategoryIcon{
 }
 
 @media screen and (max-width: 768px){
+.checkout-payment-method .payment-methods{
+	margin:0;
+}
  .sidebar.sidebar-additional .block.products-sidebar{
   display:none;
  }
